--- a/package.json
+++ b/package.json
@@ -76,7 +76,6 @@
     "react-redux": "^4.4.0",
     "react-router": "^3.0.0",
     "redux": "^3.3.1",
-    "redux-saga": "^0.14.3",
-    "redux-thunk": "^2.0.1"
+    "redux-saga": "^0.14.3"
   }
 }
